--- a/html/julio/padrao.html
+++ b/html/julio/padrao.html
@@ -7,47 +7,65 @@
 </head>
 <body>
     <header>
+        <nav>
+            <ul>
+                <li><a href="#">Inicio</a></li>
+                <li><a href="#">Amigos</a></li>
+                <li><a href="#">Aplicativos</a></li>
+                <li><a href="#">Notificacoes</a></li>
+                <li><a href="#">Chat</a></li>
+            </ul>
+        </nav>
+        <div class="clear"></div>
         <div>
             <p>Nome da pessoa 1</p>
-            <img src="" alt="Foto"/>
+            <img src="img/julio.jpg" alt="Foto"/>
         </div>
         <div>
             <p>Nome da pessoa 2</p>
-            <img src="" alt="Foto"/>
+            <img src="img/fititnt.jpg" alt="Foto"/>
         </div>
         <div>
             <p>Nome da pessoa 3</p>
-            <img src="" alt="Foto"/>
+            <img src="img/julio.jpg" alt="Foto"/>
         </div>
         <div>
             <p>Nome da pessoa 4</p>
-            <img src="" alt="Foto"/>
+            <img src="img/fititnt.jpg" alt="Foto"/>
         </div>
     </header>
     <div class="clear"></div>
     <div id="corpo">
-    <aside>
-        <nav>
-            <ul>
-                <li>Menu 1</li>
-                <li>Menu 2</li>
-                <li>Menu 3</li>
-            </ul>
-        </nav>
-    </aside>
-    <div id="conteudo">
-        <div id="comandos"> <a href="#">Compacto</a> | <a href="#">Full</a> </div> 
-        <div id="dia"> Sabado </div><div class="clear"></div>
-        <div class="odd"><img src="" alt="Foto"/> <span>Lorem Ipsun</span> </div> <div class="clear"></div>
-        <div class="even"><img src="" alt="Foto"/> <span>Lorem Ipsun</span> </div> <div class="clear"></div>
-        <div class="odd"><img src="" alt="Foto"/> <span>Lorem Ipsun</span> </div> <div class="clear"></div>
-        <div class="even resposta1"><img src="" alt="Foto"/> <span>Lorem Ipsun</span> </div> <div class="clear"></div>
-        <div class="odd resposta1"><img src="" alt="Foto"/> <span>Lorem Ipsun</span> </div> <div class="clear"></div>
-        <div class="even resposta1"><img src="" alt="Foto"/> <span>Lorem Ipsun</span> </div> <div class="clear"></div>
-        <div class="odd resposta1"><img src="" alt="Foto"/> <span>Lorem Ipsun</span> </div> <div class="clear"></div>
-        <div class="even"><img src="" alt="Foto"/> <span>Lorem Ipsun</span> </div> <div class="clear"></div>
-        <div class="odd"><img src="" alt="Foto"/> <span>Lorem Ipsun</span> </div> <div class="clear"></div>
-    </div>  
+        <aside>
+            <nav>
+                <ul>
+                    <li><a href="#">Menu 1</a></li>
+                    <li><a href="#">Menu 2</a></li>
+                    <li>
+                        <ul>
+                            <li><a href="#">Menu 2.1</a></li>
+                            <li><a href="#">Menu 2.2</a></li>
+                        </ul>
+                    </li>
+                    <li><a href="#">Menu 4</a></li>
+                    <li><a href="#">Menu 5</a></li>
+                    <li><a href="#">Menu 6</a></li>
+                </ul>
+            </nav>
+        </aside>
+        <div id="conteudo">
+            <div id="comandos"> <a href="#">Compacto</a> | <a href="#">Full</a> </div> 
+            <div id="dia"> Sabado </div><div class="clear"></div>
+            <div class="odd"><img src="img/julio.jpg" alt="Foto"/> <a href="#">Nome da Pessoa</a> <span>Lorem Ipsun</span> </div> <div class="clear"></div>
+            <div class="even"><img src="img/fititnt.jpg" alt="Foto"/> <a href="#">Nome da Pessoa</a> <span>Lorem Ipsun</span> </div> <div class="clear"></div>
+            <div class="odd"><img src="img/julio.jpg" alt="Foto"/> <a href="#">Nome da Pessoa</a> <span>Lorem Ipsun</span> </div> <div class="clear"></div>
+            <div class="even resposta1"><img src="img/fititnt.jpg" alt="Foto"/> <a href="#">Nome da Pessoa</a> <span>Lorem Ipsun</span> </div> <div class="clear"></div>
+            <div class="odd resposta1"><img src="img/julio.jpg" alt="Foto"/> <a href="#">Nome da Pessoa</a> <span>Lorem Ipsun</span> </div> <div class="clear"></div>
+            <div class="even resposta1"><img src="img/fititnt.jpg" alt="Foto"/> <a href="#">Nome da Pessoa</a> <span>Lorem Ipsun</span> </div> <div class="clear"></div>
+            <div class="odd resposta1"><img src="img/julio.jpg" alt="Foto"/> <a href="#">Nome da Pessoa</a> <span>Lorem Ipsun</span> </div> <div class="clear"></div>
+            <div class="even"><img src="img/fititnt.jpg" alt="Foto"/> <a href="#">Nome da Pessoa</a> <span>Lorem Ipsun</span> </div> <div class="clear"></div>
+            <div class="odd"><img src="img/julio.jpg" alt="Foto"/> <a href="#">Nome da Pessoa</a> <span>Lorem Ipsun</span> </div> <div class="clear"></div>
+        </div>  
     </div>
     <div class="clear"></div>
     <footer>
