animando os followers

--- a/html/julio/padrao.html
+++ b/html/julio/padrao.html
@@ -17,22 +17,35 @@
             </ul>
         </nav>
         <div class="clear"></div>
-        <div>
-            <p>Nome da pessoa 1</p>
-            <img src="img/julio.jpg" alt="Foto"/>
-        </div>
-        <div>
-            <p>Nome da pessoa 2</p>
-            <img src="img/fititnt.jpg" alt="Foto"/>
-        </div>
-        <div>
-            <p>Nome da pessoa 3</p>
-            <img src="img/julio.jpg" alt="Foto"/>
-        </div>
-        <div>
-            <p>Nome da pessoa 4</p>
-            <img src="img/fititnt.jpg" alt="Foto"/>
-        </div>
+			<div class="follower">
+				<p>Júlio Pontes</p>
+				<img src="http://a2.twimg.com/profile_images/1534464224/image_reasonably_small.jpg" alt="Foto" class="rounded" />
+			</div>
+			<div class="follower">
+				<p>Paulino Michelazzo</p>
+				<img src="http://a1.twimg.com/profile_images/1357329543/paulino6_reasonably_small.jpg" alt="Foto" class="rounded" />
+			</div>
+			<div class="follower">
+				<p>Luis Henrique</p>
+				<img src="http://a3.twimg.com/profile_images/384751386/tete_twitter_reasonably_small.png" alt="Foto" class="rounded" />
+			</div>
+			<div class="follower">
+				<p>Pedro Renan</p>
+				<img src="http://a2.twimg.com/profile_images/1527371273/image_reasonably_small.jpg" alt="Foto" class="rounded" />
+			</div>
+			<div class="follower">
+				<p>Júlio Coutinho</p>
+				<img src="http://a2.twimg.com/profile_images/1539910451/cout_reasonably_small.jpg" alt="Foto" class="rounded" />
+			</div>
+			<div class="follower">
+				<p>Emerson Rocha Luiz</p>
+				<img src="http://a2.twimg.com/profile_images/1533756111/fititnt_foto_jugrs_reasonably_small.jpg" alt="Foto" class="rounded" />
+			</div>
+		
+			<ul id="tabs" class="pagination">
+				<li id="dashboard_show">.</li>
+			</ul>
+			<div class="clear"></div>
     </header>
     <div class="clear"></div>
     <div id="corpo">
@@ -78,5 +91,6 @@
 <script src="js/mootools-core-1.4.0-full-nocompat.js"></script>
 <script src="js/mootools-more.js"></script>
 <script src="js/padrao.js"></script>
+<script src="js/animacao.js"></script>
 </body>
 </html>
